# technova-p4

./: .gitignore  pyproject.toml  readme.md  requirements.txt
notebooks/: 01_EDA.ipynb
